@startuml NotificationsClassDiagram

!include ../../_style.puml

note as n1
Each concrete Notification has its own Manager class
(ReplyNotificationManager, FollowerNotificationManager,
ChatMessageNotificationManager). Their `create()`
calls `send_ws_event(user_group(receiver.uuid),
NOTIFICATIONS_CHANGED)`. The receiver is resolved per
model (orig_publication.author for replies,
receiver for the other two).
end note

class BaseUser <<external>>
class Publication <<external>>
class Chat <<external>>

class NotificationProfile <<DjangoModel>> {
    read_at: datetime
}
NotificationProfile --> "1" BaseUser : user (1:1)

class ReplyNotification <<DjangoModel, broadcasts ws on create>>
class FollowerNotification <<DjangoModel, broadcasts ws on create>>
class ChatMessageNotification <<DjangoModel, broadcasts ws on create>>

ReplyNotification --> "0..1" Publication : orig_publication
ReplyNotification --> "1" Publication : reply_publication

FollowerNotification ---> "1" BaseUser : sender
FollowerNotification --> "1" BaseUser : receiver

ChatMessageNotification --> "1" Publication : message
ChatMessageNotification --> "1" Chat : chat
ChatMessageNotification --> "1" BaseUser : receiver

@enduml
